updated minor corrections

--- a/authentication/forgot_password/forgotPass.html
+++ b/authentication/forgot_password/forgotPass.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forgot Password | Lorem</title>
+    <title>Forgot Password | MajorSpark</title>
     <link rel="stylesheet" href="https://monad-ui.netlify.app/componentLibrary.css">
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/cart_page/cart_page.css">
@@ -15,7 +15,7 @@
 
 <body class="body-container">
     <nav class="navbar">
-        <h3 class="nav__heading">Lorem</h3>
+        <a href="/" class="link--home"> <h3 class="nav__heading">MajorSpark</h3> </a>
         <div class="search-container">
             <input type="search" name="searchBar" class="input__search" placeholder="search here">
             <a href="#"><button class="btn__search"><img src="/images/home-page/search.png" alt="search"
@@ -39,6 +39,9 @@
                     </div>
                     <p class="text--cart">Cart</p>
                 </div>
+            </a>
+            <a href="#" class="item--link">
+                <img src="/images/home-page/logout.png" alt="Logout icon" class="badge__img">
             </a>
         </div>
         <div class="search-container search-container2">
