--- a/authentication/signUp_page/signUp.html
+++ b/authentication/signUp_page/signUp.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Signup | Lorem</title>
+    <title>Signup | MajorSpark</title>
     <link rel="stylesheet" href="https://monad-ui.netlify.app/componentLibrary.css">
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/cart_page/cart_page.css">
@@ -13,27 +13,30 @@
 </head>
 <body class="body-container">
     <nav class="navbar">
-        <h3 class="nav__heading">Lorem</h3>
+       <a href="/" class="link--home"> <h3 class="nav__heading">MajorSpark</h3> </a>
         <div class="search-container">
             <input type="search" name="searchBar" class="input__search" placeholder="search here">
             <a href="#"><button class="btn__search"><img src="/images/home-page/search.png" alt="search" class="img--icon"></button></a>
         </div>
         <div class="customer-info">
            <a href="/authentication/login_page/login.html" class="link"> <button class="btn--login">Login</button> </a>
-           <a href="/wishlist/" class="item--link"> <div class="wishlist-box">
+           <a href="/wishlist/wishlist.html" class="item--link"> <div class="wishlist-box">
                 <div class="badge">
                     <img src="/images/home-page/wishlist.png" alt="wishlist image" class="badge__img">
                     <span class="badge__text">7</span>
                 </div>
             </div>
         </a>
-          <a href="/cart_page/cart_page.css" class="item--link"> <div class="cart-box">
+          <a href="/cart_page/cart_page.html" class="item--link"> <div class="cart-box">
                 <div class="badge">
                     <img src="/images/home-page/cart.png" alt="Cart image" class="badge__img">
                     <span class="badge__text">1</span>
                 </div>
                 <p class="text--cart">Cart</p>
             </div>
+        </a>
+        <a href="#" class="item--link">
+            <img src="/images/home-page/logout.png" alt="Logout icon" class="badge__img">
         </a>
         </div>
         <div class="search-container search-container2">
