--- a/cart_page/cart_page.html
+++ b/cart_page/cart_page.html
@@ -4,34 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cart | Lorem</title>
+    <title>Cart | MajorSpark</title>
     <link rel="stylesheet" href="https://monad-ui.netlify.app/componentLibrary.css">
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/cart_page/cart_page.css">
 </head>
 <body class="body-container">
     <nav class="navbar">
-        <h3 class="nav__heading">Lorem</h3>
+        <a href="/" class="link--home"> <h3 class="nav__heading">MajorSpark</h3> </a>
         <div class="search-container">
             <input type="search" name="searchBar" class="input__search" placeholder="search here">
             <a href="#"><button class="btn__search"><img src="/images/home-page/search.png" alt="search" class="img--icon"></button></a>
         </div>
         <div class="customer-info">
-            <button class="btn--login">Login</button>
-           <a href="" class="item--link"> <div class="wishlist-box">
+            <a href="/authentication/login_page/login.html" class="item--link"> <button
+                class="btn--login">Login</button> </a>
+        <a href="/wishlist/wishlist.html" class="item--link">
+            <div class="wishlist-box">
                 <div class="badge">
                     <img src="/images/home-page/wishlist.png" alt="wishlist image" class="badge__img">
                     <span class="badge__text">7</span>
                 </div>
             </div>
         </a>
-          <a href="" class="item--link"> <div class="cart-box">
+        <a href="/cart_page/cart_page.html" class="item--link">
+            <div class="cart-box">
                 <div class="badge">
                     <img src="/images/home-page/cart.png" alt="Cart image" class="badge__img">
                     <span class="badge__text">1</span>
                 </div>
                 <p class="text--cart">Cart</p>
             </div>
+        </a>
+        <a href="#" class="item--link">
+            <img src="/images/home-page/logout.png" alt="Logout icon" class="badge__img">
         </a>
         </div>
         <div class="search-container search-container2">
@@ -53,7 +59,7 @@
                           <p class="product-qty__text">Quantity:</p>
                           <div class="product-qty-value">
                               <button class="btn-qty btn--minus">-</button>
-                              <input type="number" class="input-qty--value" min="1" max="5">
+                              <input type="number" class="input-qty--value" value="1" min="1" max="5">
                               <button class="btn-qty btn--plus">+</button>
                           </div>
                        </div>
@@ -72,7 +78,7 @@
                            <p class="product-qty__text">Quantity:</p>
                            <div class="product-qty-value">
                                <button class="btn-qty btn--minus">-</button>
-                               <input type="number" class="input-qty--value" min="1" max="5">
+                               <input type="number" class="input-qty--value" value="1" min="1" max="5">
                                <button class="btn-qty btn--plus">+</button>
                            </div>
                         </div>
