--- a/wishlist/wishlist.html
+++ b/wishlist/wishlist.html
@@ -1,109 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cart | Lorem</title>
+    <title>Cart | MajorSpark</title>
     <link rel="stylesheet" href="https://monad-ui.netlify.app/componentLibrary.css">
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/cart_page/cart_page.css">
     <link rel="stylesheet" href="/wishlist/wishlist.css">
 </head>
+
 <body class="body-container">
     <nav class="navbar">
-        <h3 class="nav__heading">Lorem</h3>
+        <a href="/" class="link--home"> <h3 class="nav__heading">MajorSpark</h3> </a>
         <div class="search-container">
             <input type="search" name="searchBar" class="input__search" placeholder="search here">
-            <a href="#"><button class="btn__search"><img src="/images/home-page/search.png" alt="search" class="img--icon"></button></a>
+            <a href="#"><button class="btn__search"><img src="/images/home-page/search.png" alt="search"
+                        class="img--icon"></button></a>
         </div>
         <div class="customer-info">
-            <button class="btn--login">Login</button>
-           <a href="" class="item--link"> <div class="wishlist-box">
-                <div class="badge">
-                    <img src="/images/home-page/wishlist.png" alt="wishlist image" class="badge__img">
-                    <span class="badge__text">7</span>
+            <a href="/authentication/login_page/login.html" class="item--link"> <button
+                    class="btn--login">Login</button> </a>
+            <a href="/wishlist/wishlist.html" class="item--link">
+                <div class="wishlist-box">
+                    <div class="badge">
+                        <img src="/images/home-page/wishlist.png" alt="wishlist image" class="badge__img">
+                        <span class="badge__text">7</span>
+                    </div>
                 </div>
-            </div>
-        </a>
-          <a href="" class="item--link"> <div class="cart-box">
-                <div class="badge">
-                    <img src="/images/home-page/cart.png" alt="Cart image" class="badge__img">
-                    <span class="badge__text">1</span>
+            </a>
+            <a href="/cart_page/cart_page.html" class="item--link">
+                <div class="cart-box">
+                    <div class="badge">
+                        <img src="/images/home-page/cart.png" alt="Cart image" class="badge__img">
+                        <span class="badge__text">1</span>
+                    </div>
+                    <p class="text--cart">Cart</p>
                 </div>
-                <p class="text--cart">Cart</p>
-            </div>
-        </a>
+            </a>
+            <a href="#" class="item--link">
+                <img src="/images/home-page/logout.png" alt="Logout icon" class="badge__img">
+            </a>
         </div>
         <div class="search-container search-container2">
             <input type="search" name="searchBar" class="input__search" placeholder="search here">
-            <a href="#"><button class="btn__search"><img src="/images/home-page/search.png" alt="search" class="img--icon"></button></a>
+            <a href="#"><button class="btn__search"><img src="/images/home-page/search.png" alt="search"
+                        class="img--icon"></button></a>
         </div>
     </nav>
     <main class="main-container">
-    <div class="category-wrapper">
-        <h2 class="category__heading">My Wishlist</h2>
-        <div class="category-section">
-            <div class="product--card ">
-                <img src="/images/home-page/bike-electric.webp" alt="swift car" class="product__img">
-                <h3 class="product--name">2021 Lorem </h3>
-                <p class="product--version">VDI BS VI span </p>
-                <div class="product-spec">
-                    <p class="product-info">100 km/hr</p>
-                    <p class="product-info">Automatic</p>
-                    <p class="product-info">Electric</p>
+        <div class="category-wrapper">
+            <h2 class="category__heading">My Wishlist</h2>
+            <div class="category-section">
+                <div class="product--card ">
+                    <img src="/images/home-page/bike-electric.webp" alt="swift car" class="product__img">
+                    <h3 class="product--name">2021 Lorem </h3>
+                    <p class="product--version">VDI BS VI span </p>
+                    <div class="product-spec">
+                        <p class="product-info">100 km/hr</p>
+                        <p class="product-info">Automatic</p>
+                        <p class="product-info">Electric</p>
+                    </div>
+                    <div class="product-price">
+                        <p class="product-emi">₹4,333/month</p>
+                        <p class="product-total">75,000</p>
+                    </div>
+                    <p class="product--downpayment">Zero downpayment</p>
+                    <div class="product-cta">
+                        <button class="product__btn cart--remove">Move to cart</button>
+                        <img src="/images/wish_active.png" alt="wishlist icon"
+                            class="wishlist__img--active product-wishlist">
+                    </div>
                 </div>
-                <div class="product-price">
-                    <p class="product-emi">₹4,333/month</p>
-                    <p class="product-total">75,000</p>
+                <div class="product--card ">
+                    <img src="/images/home-page/bike-electric.webp" alt="swift car" class="product__img">
+                    <h3 class="product--name">2021 Lorem </h3>
+                    <p class="product--version">VDI BS VI span </p>
+                    <div class="product-spec">
+                        <p class="product-info">100 km/hr</p>
+                        <p class="product-info">Automatic</p>
+                        <p class="product-info">Electric</p>
+                    </div>
+                    <div class="product-price">
+                        <p class="product-emi">₹4,333/month</p>
+                        <p class="product-total">75,000</p>
+                    </div>
+                    <p class="product--downpayment">Zero downpayment</p>
+                    <div class="product-cta">
+                        <button class="product__btn cart--remove">Move to cart</button>
+                        <img src="/images/wish_active.png" alt="wishlist icon"
+                            class="wishlist__img--active product-wishlist">
+                    </div>
                 </div>
-                <p class="product--downpayment">Zero downpayment</p>
-                <div class="product-cta">
-                   <button class="product__btn cart--remove">Move to cart</button>
-                   <img src="/images/wish_active.png" alt="wishlist icon" class="wishlist__img--active product-wishlist">
+                <div class="product--card ">
+                    <img src="/images/home-page/bike-electric.webp" alt="swift car" class="product__img">
+                    <h3 class="product--name">2021 Lorem </h3>
+                    <p class="product--version">VDI BS VI span </p>
+                    <div class="product-spec">
+                        <p class="product-info">100 km/hr</p>
+                        <p class="product-info">Automatic</p>
+                        <p class="product-info">Electric</p>
+                    </div>
+                    <div class="product-price">
+                        <p class="product-emi">₹4,333/month</p>
+                        <p class="product-total">75,000</p>
+                    </div>
+                    <p class="product--downpayment">Zero downpayment</p>
+                    <div class="product-cta">
+                        <button class="product__btn cart--remove">Move to cart</button>
+                        <img src="/images/wish_active.png" alt="wishlist icon"
+                            class="wishlist__img--active product-wishlist">
+                    </div>
                 </div>
-           </div>
-           <div class="product--card ">
-            <img src="/images/home-page/bike-electric.webp" alt="swift car" class="product__img">
-            <h3 class="product--name">2021 Lorem </h3>
-            <p class="product--version">VDI BS VI span </p>
-            <div class="product-spec">
-                <p class="product-info">100 km/hr</p>
-                <p class="product-info">Automatic</p>
-                <p class="product-info">Electric</p>
             </div>
-            <div class="product-price">
-                <p class="product-emi">₹4,333/month</p>
-                <p class="product-total">75,000</p>
-            </div>
-            <p class="product--downpayment">Zero downpayment</p>
-            <div class="product-cta">
-                <button class="product__btn cart--remove">Move to cart</button>
-                <img src="/images/wish_active.png" alt="wishlist icon" class="wishlist__img--active product-wishlist">
-             </div>
-       </div>
-       <div class="product--card ">
-        <img src="/images/home-page/bike-electric.webp" alt="swift car" class="product__img">
-        <h3 class="product--name">2021 Lorem </h3>
-        <p class="product--version">VDI BS VI span </p>
-        <div class="product-spec">
-            <p class="product-info">100 km/hr</p>
-            <p class="product-info">Automatic</p>
-            <p class="product-info">Electric</p>
+            <button class="btn-view-all">View all</button>
         </div>
-        <div class="product-price">
-            <p class="product-emi">₹4,333/month</p>
-            <p class="product-total">75,000</p>
-        </div>
-        <p class="product--downpayment">Zero downpayment</p>
-        <div class="product-cta">
-            <button class="product__btn cart--remove">Move to cart</button>
-            <img src="/images/wish_active.png" alt="wishlist icon" class="wishlist__img--active product-wishlist">
-         </div>
-   </div>
-        </div>
-        <button class="btn-view-all">View all</button>
-    </div>
- </main> 
+    </main>
 </body>
-</html>    
+
+</html>
